--- a/plenaries/business.html
+++ b/plenaries/business.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>Commercial Spaceflight | The World Affairs Conference</title>
+  <title>Businesses in COVID | The World Affairs Conference</title>
   <meta name="description" content="Can businesses abandon their profit motives to strive for a healthier planet with our current competitive economic system...">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
@@ -65,7 +65,7 @@
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item mr-2">
-        <a class="btn btn-outline-danger" href="../wacathon/index.html" data-proofer-ignore>SPRINT</a>
+        <a class="btn btn-outline-danger" href="wacathon/index.html" data-proofer-ignore>SPRINT</a>
       </li>
       <li class="nav-item">
         <a class="btn btn-outline-primary" href="https://register.gotowebinar.com/register/6122619915197970701?source=Internal+Sign-up+Link" data-proofer-ignore>Register</a>
@@ -85,9 +85,10 @@
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>Commercial Spaceflight: Humanity's Next Steps</h1>
+						<h1>Businesses in COVID: Sink or Swim</h1>
 						<p class="card-text">
-							<p>With a growing population, it has become challenging to environmentally sustain our way of living as our unhealthy consumption of resources has begun to concern our future habitability on this planet. As a possible solution, humanity’s curiosity has sparked the recent relevance of the commercial spaceflight industry — and its significant, billion-dollar entities that have been at the forefront of astronomy-related current affairs, such as Virgin Galactic, SpaceX, and, of course, NASA. In preparation for Tomorrow, it is important we educate ourselves on the cosmos and this lucrative industry to appease our climate crisis, explore the unknown, find our rightful place in the universe, and discover the possibilities of space colonization utilizing commercial spaceflight and technological innovation. This raises the question: Is it worth abandoning societies we have spent generations building and restoring for the exploration and the colonization of outer space? As our planet suffers, is it feasible to potentially resort to space to ensure a brighter future? What is the true value in commercially exploring our solar system?
+							<p>
+                The COVID-19 pandemic has impacted everyone. It has forced us all to adapt to a ‘new reality,’ one largely involving technology and isolation. Businesses are no exception to this impact. Our plenary’s main focus is on how various businesses have been impacted by the pandemic, what changes have been made due to COVID, and what influence the epidemic will have on businesses in the future.
                             </p>
 
 					</div>
@@ -99,26 +100,25 @@
                 <hr>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jveizer.jpg" alt="Dr. Louis Friedman">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/sgoswami.jpg" alt="Bharat Masrani">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Dr. Louis Friedman</h2>
-						Dr. Louis Friedman is an emeritus executive director and Co-Founder of the Planetary Society, a non-profit organization driven to promote research and discoveries in a variety of fields relating to astronomy, planetary science, and space exploration. As a vital contributor to the space science community for over 30 years, Dr. Friedman has had a wealth of experience as he continues to guide humanity’s journey into the solar system. He earned his M.S in Engineering Mechanics at Cornell University (1963) and a Ph.D. attending the Aeronautics and Astronauts Department at M.I.T. (1971) where he developed a thesis on Extracting Scientific Information from Spacecraft Tracking Data. Additionally, he has worked extensively at the Jet Propulsion Laboratory for 10 years (1970-80), the AVCO Space Systems Division for 5 years (1963-68), and has had an accomplished history as a AIAA Congressional Fellow where he continues to testify American congress to advance issues concerning space and technological exploration. As an author of multiple books on Solar Sails; Interplanetary Flight; and Spaceflight to Mars, Dr. Friedman continues to make strong contributions to the space science community as the co-leader of the Asteroid Redirect Mission program.
-					</div>
-				</div>
-         <hr>
-        <div class="row pb-2">
-					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jveizer.jpg" alt="Janet Ivey">
-					</div>
-					<div class="col-md-8">
-            <h2 class="text-center text-md-left">Janet Ivey</h2>
-            Bio coming soon...
-					</div>
+						<h2 class="text-center text-md-left">Bharat Masrani</h2>			
+                        Bio coming soon... 
+          </div>
         </div>
-      </div>
-
-
+        <hr>
+				<div class="row pb-2">
+					<div class="col-md-4">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/sgoswami.jpg" alt="Opher Baron">
+					</div>
+					<div class="col-md-8">
+						<h2 class="text-center text-md-left">Opher Baron</h2>			
+            Opher Baron is a Distinguished Professor of Operations Management and the area coordinator for Operations Management and Statistics at the Rotman School of Management, University of Toronto.  He was a visiting associate Professor at the Industrial engineering and Management faculty of Technion (2009/10) and a visiting Professor at the School of Information Management and Engineering, Shanghai University of Finance and Economics (2016/17). He has a PhD in Operations Management from the Sloan School of Management at the Massachusetts Institute of Technology, and an MBA and BSc in Industrial Engineering and Management from The Technion - Israel Institute of Technology.  On the teaching front, Opher is especially proud of the "Analytics for decision-making" MBA elective course he introduced and teaches at Rotman. His research interests include queueing, business analytics, service operations (such as healthcare), inventory planning, and revenue management. Opher's work is published in leading journals such as Operations Research, and Manufacturing & Service Operations Management, and he has won several research and teaching awards and grants, including the 1000 Talents Plan Scholar from the Shanghai Municipal Government, 2017. Opher is active in the operations research and operations management community. He has given numerous invited lectures and seminars, chaired several conferences, clusters, and sessions, and is currently serving on the editorial boards of several journals, including Manufacturing & Service Operations Management and Service Science.
+          </div>
+          </div>
+				</div>
+        
 			<div class="card card-body text-center mt-2">
 				<p class="card-text">
 					<a class="card-link" href="../plenaries/index.html"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
