--- a/plenaries/justice.html
+++ b/plenaries/justice.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>Commercial Spaceflight | The World Affairs Conference</title>
+  <title>Social Justice | The World Affairs Conference</title>
   <meta name="description" content="Can businesses abandon their profit motives to strive for a healthier planet with our current competitive economic system...">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
@@ -65,7 +65,7 @@
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item mr-2">
-        <a class="btn btn-outline-danger" href="../wacathon/index.html" data-proofer-ignore>SPRINT</a>
+        <a class="btn btn-outline-danger" href="wacathon/index.html" data-proofer-ignore>SPRINT</a>
       </li>
       <li class="nav-item">
         <a class="btn btn-outline-primary" href="https://register.gotowebinar.com/register/6122619915197970701?source=Internal+Sign-up+Link" data-proofer-ignore>Register</a>
@@ -85,9 +85,10 @@
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>Commercial Spaceflight: Humanity's Next Steps</h1>
+						<h1>Social Justice: Our History and Future</h1>
 						<p class="card-text">
-							<p>With a growing population, it has become challenging to environmentally sustain our way of living as our unhealthy consumption of resources has begun to concern our future habitability on this planet. As a possible solution, humanity’s curiosity has sparked the recent relevance of the commercial spaceflight industry — and its significant, billion-dollar entities that have been at the forefront of astronomy-related current affairs, such as Virgin Galactic, SpaceX, and, of course, NASA. In preparation for Tomorrow, it is important we educate ourselves on the cosmos and this lucrative industry to appease our climate crisis, explore the unknown, find our rightful place in the universe, and discover the possibilities of space colonization utilizing commercial spaceflight and technological innovation. This raises the question: Is it worth abandoning societies we have spent generations building and restoring for the exploration and the colonization of outer space? As our planet suffers, is it feasible to potentially resort to space to ensure a brighter future? What is the true value in commercially exploring our solar system?
+							<p>
+                2020 has been a year of change in many ways. One of those major changes being the social justice movements that have occurred throughout the course of the year, a prominent one being the Black Lives Matter movement. This movement initiated change and awareness, but it still continues. We aim to educate high school students around the globe about the history of the Black Lives Matter movement, current and recent developments of BLM and the outcomes of the recent events. As we move towards a brighter future of anti-racism, there is pressure on the next generation to carry this movement forward.
                             </p>
 
 					</div>
@@ -95,30 +96,30 @@
 			</div>
             
 			<div class="card card-body mt-2">
-				<h1 class="text-center">Speakers</h1>
+				<h1 class="text-center">Speaker</h1>
                 <hr>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jveizer.jpg" alt="Dr. Louis Friedman">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/sgoswami.jpg" alt="Ajani Charles">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Dr. Louis Friedman</h2>
-						Dr. Louis Friedman is an emeritus executive director and Co-Founder of the Planetary Society, a non-profit organization driven to promote research and discoveries in a variety of fields relating to astronomy, planetary science, and space exploration. As a vital contributor to the space science community for over 30 years, Dr. Friedman has had a wealth of experience as he continues to guide humanity’s journey into the solar system. He earned his M.S in Engineering Mechanics at Cornell University (1963) and a Ph.D. attending the Aeronautics and Astronauts Department at M.I.T. (1971) where he developed a thesis on Extracting Scientific Information from Spacecraft Tracking Data. Additionally, he has worked extensively at the Jet Propulsion Laboratory for 10 years (1970-80), the AVCO Space Systems Division for 5 years (1963-68), and has had an accomplished history as a AIAA Congressional Fellow where he continues to testify American congress to advance issues concerning space and technological exploration. As an author of multiple books on Solar Sails; Interplanetary Flight; and Spaceflight to Mars, Dr. Friedman continues to make strong contributions to the space science community as the co-leader of the Asteroid Redirect Mission program.
+						<h2 class="text-center text-md-left">Ajani Charles</h2>			
+                        Bio coming soon...
+
 					</div>
 				</div>
-         <hr>
-        <div class="row pb-2">
+                <!--
+				<div class="row">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jveizer.jpg" alt="Janet Ivey">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/ayetchew.png" alt="Yossi Sheffi">
 					</div>
 					<div class="col-md-8">
-            <h2 class="text-center text-md-left">Janet Ivey</h2>
-            Bio coming soon...
+						<h2 class="text-center text-md-left">Adonis Yatchew</h2>
+						Adonis Yatchew’s research focuses on energy and regulatory economics, and econometrics. Since completing his Ph.D. at Harvard University, he has taught at the University of Toronto. He has also held visiting appointments at Trinity College, Cambridge University, the University of Chicago and Australian National University, among others. He the Editor-in-Chief of The Energy Journal. He has advised public and private sector companies on energy, regulatory and other matters for over 25 years and has provided testimony in numerous regulatory and litigation procedures. Adonis Yatchew currently teaches undergraduate and graduate courses in energy, graduate courses in econometrics and ‘Big Ideas’ courses in the School of Environment with colleagues in physics and classics.
 					</div>
-        </div>
-      </div>
-
-
+				</div>
+			</div>
+            -->
 			<div class="card card-body text-center mt-2">
 				<p class="card-text">
 					<a class="card-link" href="../plenaries/index.html"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
