--- a/plenaries/media.html
+++ b/plenaries/media.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>Commercial Spaceflight | The World Affairs Conference</title>
+  <title>Social Media | The World Affairs Conference</title>
   <meta name="description" content="Can businesses abandon their profit motives to strive for a healthier planet with our current competitive economic system...">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
@@ -65,7 +65,7 @@
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item mr-2">
-        <a class="btn btn-outline-danger" href="../wacathon/index.html" data-proofer-ignore>SPRINT</a>
+        <a class="btn btn-outline-danger" href="wacathon/index.html" data-proofer-ignore>SPRINT</a>
       </li>
       <li class="nav-item">
         <a class="btn btn-outline-primary" href="https://register.gotowebinar.com/register/6122619915197970701?source=Internal+Sign-up+Link" data-proofer-ignore>Register</a>
@@ -85,9 +85,10 @@
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>Commercial Spaceflight: Humanity's Next Steps</h1>
+						<h1>Social Media: We are the Product</h1>
 						<p class="card-text">
-							<p>With a growing population, it has become challenging to environmentally sustain our way of living as our unhealthy consumption of resources has begun to concern our future habitability on this planet. As a possible solution, humanity’s curiosity has sparked the recent relevance of the commercial spaceflight industry — and its significant, billion-dollar entities that have been at the forefront of astronomy-related current affairs, such as Virgin Galactic, SpaceX, and, of course, NASA. In preparation for Tomorrow, it is important we educate ourselves on the cosmos and this lucrative industry to appease our climate crisis, explore the unknown, find our rightful place in the universe, and discover the possibilities of space colonization utilizing commercial spaceflight and technological innovation. This raises the question: Is it worth abandoning societies we have spent generations building and restoring for the exploration and the colonization of outer space? As our planet suffers, is it feasible to potentially resort to space to ensure a brighter future? What is the true value in commercially exploring our solar system?
+							<p>
+                Social networking has become one of the most prevalent facets of our society. While benefiting our world by constructing a network of seemingly endless connectivity, it has also caused immense consequences to society as a whole. From the discussion of user manipulation, personal security and privacy, fake news and conspiracy, to human products, social media is reprogramming the way our world functions. Tech conglomerates such as Facebook, Google, and Twitter are at the forefront of the new age of exploitation, playing a pivotal role in potential human detriment. So, we must keep the conversation going. If we are the product, what does this mean for civilization? What does the future of social media entail? What are the consequences?
                             </p>
 
 					</div>
@@ -99,26 +100,26 @@
                 <hr>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jveizer.jpg" alt="Dr. Louis Friedman">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/sgoswami.jpg" alt="David Carroll">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Dr. Louis Friedman</h2>
-						Dr. Louis Friedman is an emeritus executive director and Co-Founder of the Planetary Society, a non-profit organization driven to promote research and discoveries in a variety of fields relating to astronomy, planetary science, and space exploration. As a vital contributor to the space science community for over 30 years, Dr. Friedman has had a wealth of experience as he continues to guide humanity’s journey into the solar system. He earned his M.S in Engineering Mechanics at Cornell University (1963) and a Ph.D. attending the Aeronautics and Astronauts Department at M.I.T. (1971) where he developed a thesis on Extracting Scientific Information from Spacecraft Tracking Data. Additionally, he has worked extensively at the Jet Propulsion Laboratory for 10 years (1970-80), the AVCO Space Systems Division for 5 years (1963-68), and has had an accomplished history as a AIAA Congressional Fellow where he continues to testify American congress to advance issues concerning space and technological exploration. As an author of multiple books on Solar Sails; Interplanetary Flight; and Spaceflight to Mars, Dr. Friedman continues to make strong contributions to the space science community as the co-leader of the Asteroid Redirect Mission program.
+						<h2 class="text-center text-md-left">David Carroll</h2>			
+            David Carroll is currently an associate professor of media design at Parsons School of Design at The New School in New York City and formerly the Director of the MFA Design and Technology graduate program. His teaching and research delves into the realms of technology and all things digital media, giving a critical outlook on shifts in digital advertising, adtech, data rights, privacy, surveillance, social media, and more. Carroll also founded the Center for Mobile Creativity, assisting research grants for various other foundations. Carroll was featured in the 2019 Netflix documentary, <i>The Great Hack</i>, which detailed his data quest which received international attention; to legally challenge Cambridge Analytica to recover his own personal data. Cambridge Analytica, a UK based consulting company, was able to influence the 2016 US Presidential Election by harvesting data from millions of American voters for political advertising. Carroll’s goal was to prove that one could reclaim their data profile by filing a lawsuit against the company based on the UK Data Protection Act of 1998
+
 					</div>
 				</div>
-         <hr>
+          <hr>
         <div class="row pb-2">
-					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jveizer.jpg" alt="Janet Ivey">
-					</div>
-					<div class="col-md-8">
-            <h2 class="text-center text-md-left">Janet Ivey</h2>
-            Bio coming soon...
-					</div>
+          <div class="col-md-4">
+            <img class="img-fluid mx-auto d-block rounded" src="../img/speakers/sgoswami.jpg" alt="Producers of the Social Dilemma Film">
+          </div>
+          <div class="col-md-8">
+             <h2 class="text-center text-md-left">Producers of the <i>Social Dilemma</i> Film</h2>			
+                        Bio coming soon...
+
+           </div>
         </div>
       </div>
-
-
 			<div class="card card-body text-center mt-2">
 				<p class="card-text">
 					<a class="card-link" href="../plenaries/index.html"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
