--- a/plenaries/index.html
+++ b/plenaries/index.html
@@ -83,17 +83,17 @@
           <a href="space.html">
           <img class="card-img" style = "filter: brightness(60%)" src="../img/plen/space.png" alt="Card image">
           <div class="card-img-overlay text-center text-white">
-            <h2 class="card-title" style="text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black">Climate Change: Myth vs. Reality</h2>
+            <h2 class="card-title" style="text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black">Commercial Spaceflight: Humanity's Next Steps</h2>
           </div>
           </a>
       </div>
   
   
       <div class="card">
-          <a href="educ.html">
-          <img class="card-img" style = "filter: brightness(60%)" src="../img/plen/education.png" alt="Card image">
+          <a href="justice.html">
+          <img class="card-img" style = "filter: brightness(60%)" src="../img/plen/justice.png" alt="Card image">
           <div class="card-img-overlay text-center text-white">
-            <h3 class="card-title" style="text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black">Too Cool for School</h3>
+            <h3 class="card-title" style="text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black">Social Justice: Our History and Future</h3>
           </div>
           </a>
       </div>
@@ -102,9 +102,9 @@
   <div class="card-deck mt-2">
       <div class="card">
           <a href="pol.html">
-          <img class="card-img" style = "filter: brightness(60%)" src="../img/plen/immigration.png" alt="Card image">
+          <img class="card-img" style = "filter: brightness(60%)" src="../img/plen/media.png" alt="Card image">
           <div class="card-img-overlay text-center text-white">
-            <h3 class="card-title" style="text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black">Immigration: Two sides of the same wall</h3>
+            <h3 class="card-title" style="text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black">Social Media: We are the Product</h3>
           </div>
           </a>
       </div>
@@ -112,9 +112,9 @@
   
       <div class="card">
           <a href="sprea.html">
-          <img class="card-img" style = "filter: brightness(60%)" src="../img/plen/fake.png" alt="Card image">
+          <img class="card-img" style = "filter: brightness(60%)" src="../img/plen/business.png" alt="Card image">
           <div class="card-img-overlay text-center text-white">
-            <h3 class="card-title" style="text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black">Satirical Society</h3>
+            <h3 class="card-title" style="text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black">Businesses in COVID: Sink or Swim</h3>
           </div>
           </a>
       </div>
