--- a/plenaries/index.html
+++ b/plenaries/index.html
@@ -101,7 +101,7 @@
   
   <div class="card-deck mt-2">
       <div class="card">
-          <a href="pol.html">
+          <a href="media.html">
           <img class="card-img" style = "filter: brightness(60%)" src="../img/plen/media.png" alt="Card image">
           <div class="card-img-overlay text-center text-white">
             <h3 class="card-title" style="text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black">Social Media: We are the Product</h3>
@@ -111,7 +111,7 @@
   
   
       <div class="card">
-          <a href="sprea.html">
+          <a href="business.html">
           <img class="card-img" style = "filter: brightness(60%)" src="../img/plen/business.png" alt="Card image">
           <div class="card-img-overlay text-center text-white">
             <h3 class="card-title" style="text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black">Businesses in COVID: Sink or Swim</h3>
