--- a/plenaries/justice.html
+++ b/plenaries/justice.html
@@ -120,6 +120,7 @@
 				</div>
 			</div>
             -->
+          </div>
 			<div class="card card-body text-center mt-2">
 				<p class="card-text">
 					<a class="card-link" href="../plenaries/index.html"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
