--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="col-sm-9">
         <h4>What's WAC?</h4>
         <p>
-          The World Affairs Conference (WAC) is North America's largest annual student-run current affairs conference. Annually held at Upper Canada College in Toronto, Canada, the World Affairs Conference connects over 1000 students, with a common interest in current affairs, from across North America.
+          The World Affairs Conference (WAC) is North America's largest annual student-run current affairs conference. Annually held at Upper Canada College in Toronto, Canada, the World Affairs Conference connects over 1000 students, with a common interest in current affairs, typically from across North America. Due to the COVID-19 pandemic, the 2021 World Affairs Conference will be hosted online and available worldwide!
         </p>
       </div>
     </div>
@@ -149,7 +149,7 @@
           <div class="col-sm-9">
             <h3>Edward Snowden</h3>
             <p>
-              Five years ago, Edward Snowden gave the WAC 2015 Lionel Gelber Keynote Address. In June 2013, Snowden leaked highly classified information about the scale and scope of NSA and CIA counter-terrorism and counter-intelligence operations around the globe. Since then, he has become a household name and is among the most influential privacy activists in the world. At the Keynote Address, Snowden explained his views on global privacy issues, government involvement in citizens' lives, and the dangers of the digital age.
+              Six years ago, Edward Snowden gave the WAC 2015 Lionel Gelber Keynote Address. In June 2013, Snowden leaked highly classified information about the scale and scope of NSA and CIA counter-terrorism and counter-intelligence operations around the globe. Since then, he has become a household name and is among the most influential privacy activists in the world. At the Keynote Address, Snowden explained his views on global privacy issues, government involvement in citizens' lives, and the dangers of the digital age.
             </p>
           </div>
         </div>
