updated speaker pics/bios

--- a/plenaries/business.html
+++ b/plenaries/business.html
@@ -100,7 +100,7 @@
                 <hr>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/sgoswami.jpg" alt="Bharat Masrani">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/bmasrani.png" alt="Bharat Masrani">
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">Bharat Masrani</h2>			
@@ -110,7 +110,7 @@
         <hr>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/sgoswami.jpg" alt="Opher Baron">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/obaron.png" alt="Opher Baron">
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">Opher Baron</h2>			
