--- a/plenaries/media.html
+++ b/plenaries/media.html
@@ -100,7 +100,7 @@
                 <hr>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/sgoswami.jpg" alt="David Carroll">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/dcarroll.png" alt="David Carroll">
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">David Carroll</h2>			
@@ -111,7 +111,7 @@
           <hr>
         <div class="row pb-2">
           <div class="col-md-4">
-            <img class="img-fluid mx-auto d-block rounded" src="../img/speakers/sgoswami.jpg" alt="Producers of the Social Dilemma Film">
+            <img class="img-fluid mx-auto d-block rounded" src="../img/speakers/socialdilemma.png" alt="Producers of the Social Dilemma Film">
           </div>
           <div class="col-md-8">
              <h2 class="text-center text-md-left">Producers of the <i>Social Dilemma</i> Film</h2>			
