--- a/plenaries/space.html
+++ b/plenaries/space.html
@@ -99,7 +99,7 @@
                 <hr>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jveizer.jpg" alt="Dr. Louis Friedman">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/lfriedman.png" alt="Dr. Louis Friedman">
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">Dr. Louis Friedman</h2>
@@ -109,7 +109,7 @@
          <hr>
         <div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jveizer.jpg" alt="Janet Ivey">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jivey.png" alt="Janet Ivey">
 					</div>
 					<div class="col-md-8">
             <h2 class="text-center text-md-left">Janet Ivey</h2>
