--- a/addresses/index.html
+++ b/addresses/index.html
@@ -83,9 +83,9 @@
 
             <div class="row">
                 <div class="col">
-                    <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/fmckenna.jpg" alt="Frank McKenna"/>
-                    <h2 class="text-center">Frank McKenna</h2>
-                    <h4 class="text-center">Former Ambassador to the United States and Former Premier of New Brunswick</h4>
+                    <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/achisholm.png" alt="Andrew Chisholm"/>
+                    <h2 class="text-center">Andrew Chisholm</h2>
+                    <h4 class="text-center">Corporate Director of RBC</h4>
                     <p>
                         Frank McKenna became the darling of the Canadian business establishment and the centrepiece of the national media for his efforts to attract jobs to New Brunswick and for his social policy innovations. Since May 1, 2006, McKenna has remained as the Deputy Chairman of TD Bank’s Financial Group. He is responsible for supporting the Bank in its customer acquisition strategy, particularly in the area of Wholesale and Commercial Banking. Prior to joining TDBFG, he was posted to Washington, D.C. and served as the Canadian Ambassador to the United States of America from 2005 to 2006.
 
@@ -102,15 +102,19 @@
                      
                 </p>
                 <hr>
-                <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/mromanow.png" alt="Diana Tesic"/>
-                <h2 class="text-center">Michele Romanow</h2>
-                <h4 class="text-center">Tech Titan | Serial Entrepreneur | Venture Capitalist | Dragon </h4>
+                <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/alau.png" alt="Allan Lau"/>
+                <h2 class="text-center">Allan Lau</h2>
+                <h4 class="text-center">Co-founder and CEO of Wattpad</h4>
                 <p>
-                Tech titan Michele Romanow is an engineer and a serial entrepreneur who started five companies before her 33rd birthday. A “Dragon” on CBC’s hit show Dragons’ Den, Michele is the co-founder of Buytopia.ca, Snap By Groupon, and — most recently — Clearbanc, an online financial service. 
-
-                Michele has driven new digital solutions to many of the world’s leading brands, including Netflix and Starbucks, and has earned substantial recognition as a finalist for the EY Entrepreneur of the Year Award; the RBC Canadian Women Entrepreneur Awards; and was a Cartier Women’s Initiative Award global finalist, among many other nominations.
+                Bio coming soon...
                 </p>
-                <p>Michele is currently a director for Vail Resorts, Freshii, League of Innovators, Queen’s Business School, and Shad Valley, a transformational program that develops the entrepreneurial potential of exceptional Canadian youth.
+
+                <hr>
+                <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/elau.png" alt="Eva Lau"/>
+                <h2 class="text-center">Eva Lau</h2>
+                <h4 class="text-center">Co-founder and CEO of Two Small Fish</h4>
+                <p>
+                Bio coming soon...
                 </p>
             </div>
         </div>
