--- a/addresses/index.html
+++ b/addresses/index.html
@@ -87,7 +87,7 @@
                     <h2 class="text-center">Andrew Chisholm</h2>
                     <h4 class="text-center">Corporate Director of RBC</h4>
                     <p>
-                        Frank McKenna became the darling of the Canadian business establishment and the centrepiece of the national media for his efforts to attract jobs to New Brunswick and for his social policy innovations. Since May 1, 2006, McKenna has remained as the Deputy Chairman of TD Bank’s Financial Group. He is responsible for supporting the Bank in its customer acquisition strategy, particularly in the area of Wholesale and Commercial Banking. Prior to joining TDBFG, he was posted to Washington, D.C. and served as the Canadian Ambassador to the United States of America from 2005 to 2006.
+                        Bio coming soon...
 
                     </p>
                 </div>
