--- a/keynote/index.html
+++ b/keynote/index.html
@@ -81,25 +81,28 @@
 <div class="container">
   <div class="card">
     <div class="card-body">
-      <h1 class="text-center"> WAC 2020: On the Brink of War: What You Need To Know About the US and Iran</h1>
+      <!-- <h1 class="text-center"> WAC 2020: On the Brink of War: What You Need To Know About the US and Iran</h1>
         <p class = "text-center">
             In the wake of Donald Trump's controversial decision to assassinate General Qassim Soleimani, Mehdi Hasan analyzes the ongoing tensions between the United Stated of America and the Republic of Iran, unpacks the history behind the fraught relations between the two countries, and offers his own solutions for ending four decades of enmity.
         </p>
        <hr>
-      <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/mhasen.jpg" alt="Mehdi Hasan"/>
+      <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/mhasan.jpg" alt="Mehdi Hasan"/>
       <h2 class="text-center">Mehdi Hasan</h2>
       <p>
         Mehdi Hasan is an award-winning journalist, political commentator, senior contributor at The Intercept, host of the podcast Deconstructed, as well as a presenter for Al Jazeera English. He is known globally for his televised takedowns of world leaders and political proxies. As a British, Muslim immigrant based in Donald Trump's Washington D.C., Mehdi offers a provocative perspective on the ups and downs of global politics and world affairs. At a time when the truth is being denied to the world, in the midst of chaos, moral failure, and when everything seems out of WAC, Mehdi exemplifies tenacity and courage in countering the myths and snowballing used by opponents of transparency, pluralism and democracy. 
-      </p>
+      </p> -->
+      <h1 class="text-center">WAC 2021: Keynote Speaker To Be Announced Soon</h1>
+      <hr>
+      <p class="text-center">The Keynote speaker has not been announced yet, but expect a big name.</p>
     </div>
   </div>
   <div class="card-deck mt-2">
     <div class="card">
-      <img class="card-img-top img-fluid" src="../img/speakers/jhansen.png" alt="James Hansen">
+      <img class="card-img-top img-fluid" src="../img/speakers/mhasan.png" alt="Mehdi Hasan">
       <div class="card-body">
-        <h3 class="card-title">WAC 2019: Professor James Hansen</h3>
+        <h3 class="card-title">WAC 2020: Mehdi Hasan</h3>
         <p class="card-text">
-         Dr. James Hansen was one of the leading researchers on climatology, his 1988 Congressional testimony on climate change helped raise broad awareness of global warming. At WAC 2019, he presented on the future of energy production and the role that young people have. His presentation was unique, as it was not merely a lecture, but a two-way exchange of ideas with the audience. His extensive experience as an environmental advocate, scientist, and professor, made for a very informative discourse on the climate.
+          Mehdi Hasan is an award-winning journalist, political commentator, senior contributor at The Intercept, host of the podcast Deconstructed, as well as a presenter for Al Jazeera English. He is known globally for his televised takedowns of world leaders and political proxies. As a British, Muslim immigrant based in Donald Trump's Washington D.C., Mehdi offers a provocative perspective on the ups and downs of global politics and world affairs. At a time when the truth is being denied to the world, in the midst of chaos, moral failure, and when everything seems out of WAC, Mehdi exemplifies tenacity and courage in countering the myths and snowballing used by opponents of transparency, pluralism and democracy.
 
             
         </p>
