--- a/plenaries/justice.html
+++ b/plenaries/justice.html
@@ -106,15 +106,14 @@
 						<h2 class="text-center text-md-left">Ajani Charles</h2>			
             Ajani Charles is a Toronto-based professional photographer, director, producer, mental health advocate, and Canon Canada ambassador with a background in fine arts who specializes in creating impactful stories about the human condition, self-actualization, and mental health.
             <br>
-            A graduate of the nationally acclaimed Claude Watson Arts Program, Ajani also apprenticed at the Toronto School of Art, the Art Gallery of Ontario, and at 235 Films, under many of the talented artists that currently work through the award-winning, production company Fela, which was co-founded by his mentor and colleague, Julien Christian Lutz, who is professionally known as Director X.
+            A graduate of the nationally acclaimed Claude Watson Arts Program, Ajani also apprenticed at the Toronto School of Art, the Art Gallery of Ontario, and at 235 Films, under many of the talented artists that currently work through the award-winning production company Fela, which was co-founded by his mentor and colleague, Julien Christian Lutz, who is professionally known as Director X.
             <br>
             In addition, Ajani has gained considerable notoriety in the Greater Toronto Area through his first photographic documentary, “Project T Dot” — a visual chronicle of the city’s hip-hop culture and community in its entirety, including a wide-ranging collection of intimate and dramatic black and white photographs. In production since December of 2006, “Project T Dot” is currently scheduled for a late 2022 publication date.
             <br>
-            Ajani is also a public speaker and a journalist for publications such as Thrive Global — an American company that provides behavior change technology and media to support individuals struggling with stress and burnout, and he counts among his many and varied commercial clients H&M, Universal Music Group, Bridgestone, Christian Dior, Calm, and the UFC. His work has been featured in publications such as Complex, Jay-Z’s Life + Times, and Vogue.
-            <br>
-            Furthermore, he has worked with numerous icons and public figures in various capacities, including the likes of Arianna Huffington, Drake, The Weeknd, Pharrell Williams, the Wu-Tang Clan, Janelle Monáe, Snoop Dogg, Nas, Slash, Kanye West, Akon, Gene Simmons, Spike Lee, Director X, Dana White, and Commander Chris Hadfiel.
+            Furthermore, he has worked with numerous icons and public figures in various capacities, including the likes of Arianna Huffington, Drake, The Weeknd, Pharrell Williams, Wu-Tang Clan, Janelle Monáe, Snoop Dogg, Nas, Slash, Kanye West, Akon, Gene Simmons, Spike Lee, Director X, Dana White, and Commander Chris Hadfiel.
             <br>
             In his plenary, Ajani will use his expertise in art, social justice, and mental health to help students around the world better appreciate themselves and, in turn, others.
+
             
 
 					</div>
